# credit-risk-llm

./: .env.example  .gitignore  01_download.py  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  📄 AI - DS PROJECT MASTER PLAN (FOR NMIMS MTECH AI).txt  📄 AI - DS PROJECT MASTER PLAN.txt
.github/workflows/: ci.yml
app/: app.py
app/templates/: index.html
configs/: config.yaml
data/: golden_dataset.json
data/processed/: encoding_maps.pkl  imputation_stats.pkl
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_baselines.ipynb  04_text_pipeline.ipynb  05_finbert.ipynb  06_qlora_finetune.ipynb  07_fusion.ipynb  08_xai.ipynb  09_fairness.ipynb
paper/: main.tex  references.bib
scripts/: generate_notebooks.py  run_text_pipeline.py  train_baselines.py
src/: __init__.py  config.py  evaluate.py  explain.py  llm_utils.py  logging_config.py  middleware.py  models.py  preprocess.py  text_utils.py
src/evaluation/: __init__.py  evaluator.py  golden_dataset.py
src/generation/: __init__.py  citation_extractor.py  generator.py  rag_chain.py
src/ingestion/: __init__.py  chunker.py  document_loader.py  embedder.py  ingest_pipeline.py
src/retrieval/: __init__.py  dense_retriever.py  hybrid_retriever.py  reranker.py  sparse_retriever.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_citation_extractor.py  test_config.py  test_document_loader.py  test_hybrid_retriever.py  test_reranker.py
